[gd_scene load_steps=3 format=3 uid="uid://dyssjq8keq4xc"]

[ext_resource type="Script" path="res://Code/Scripts/body.gd" id="1_lflrb"]
[ext_resource type="Texture2D" uid="uid://cnj655vne4vr4" path="res://Rescources/Textures/Spritesheet_corps_20250115231844.png" id="1_ne4q7"]

[node name="Body" type="Node2D" node_paths=PackedStringArray("torso", "leftLeg", "rightLeg", "leftArm", "rightArm", "head")]
script = ExtResource("1_lflrb")
torso = NodePath("Torso")
leftLeg = NodePath("leftLeg")
rightLeg = NodePath("rightLeg")
leftArm = NodePath("leftArm")
rightArm = NodePath("rightArm")
head = NodePath("head")

[node name="Torso" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 41)
texture = ExtResource("1_ne4q7")
hframes = 4
vframes = 4
frame = 12

[node name="leftLeg" type="Sprite2D" parent="."]
visible = false
position = Vector2(-5, 78)
texture = ExtResource("1_ne4q7")
flip_h = true
hframes = 4
vframes = 4
frame = 10

[node name="rightLeg" type="Sprite2D" parent="."]
visible = false
position = Vector2(4, 78)
texture = ExtResource("1_ne4q7")
hframes = 4
vframes = 4
frame = 10

[node name="leftArm" type="Sprite2D" parent="."]
visible = false
position = Vector2(-17, 49)
texture = ExtResource("1_ne4q7")
flip_h = true
hframes = 4
vframes = 4
frame = 9

[node name="rightArm" type="Sprite2D" parent="."]
visible = false
position = Vector2(17, 50)
texture = ExtResource("1_ne4q7")
hframes = 4
vframes = 4
frame = 9

[node name="head" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 14)
texture = ExtResource("1_ne4q7")
hframes = 4
vframes = 4
frame = 11
